# XbotGo-Algorithm-DoubleTracker

./: .gitignore  CMakeLists.txt  README.md  doubleTest.cpp  main.cpp
docs/: codestyle.md  version.txt
sdk/core/: ControllerManger.cpp  ControllerManger.h  Core.h  CoreSdk.cpp  CoreSdk.h  Global.h  StrategyFactory.cpp  StrategyFactory.h  StrategyManger.cpp  StrategyManger.h
sdk/logic/module/: BallTracker.cpp  BallTracker.h  DoubleFeatureNet.cpp  DoubleFeatureNet.h  FeatureNet.cpp  FeatureNet.h  PoseFeatureNet.cpp  PoseFeatureNet.h  SingleZoom.cpp  SingleZoom.h
sdk/logic/module/bytetracker/: DoubleSOT.cpp  DoubleSOT.h  MOT.cpp  MOT.h  SOT.cpp  SOT.h
sdk/logic/module/bytetracker/ByteTrack/: BYTETracker.cpp  BYTETracker.h  KalmanFilter.cpp  Rect.h  STrack.cpp  STrack.h  utils.cpp
sdk/logic/module/control/: PID.cpp  PID.h  Smoother.cpp  Smoother.h  WeightedMovingAverage.cpp  WeightedMovingAverage.h
sdk/logic/strategy/: FollowDoubleStrategy.cpp  FollowDoubleStrategy.h  FollowMeSingleStrategy.cpp  FollowMeSingleStrategy.h  IStrategy.cpp  IStrategy.h  JerseyNumberSingleStrategy.cpp  JerseyNumberSingleStrategy.h  PickleballStrategy.cpp  PickleballStrategy.h  SingleStrategy.cpp  SingleStrategy.h  SingleStrategyPose.cpp  SingleStrategyPose.h  Strategy.h  TennisStrategy.cpp  TennisStrategy.h
sdk/logic/strategy/chameleon/: BasketballTeamStrategy.cpp  BasketballTeamStrategy.h  FootballTeamStrategy.cpp  FootballTeamStrategy.h  IceHockeyTeamStrategy.cpp  IceHockeyTeamStrategy.h  TeamStrategy.cpp  TeamStrategy.h
sdk/logic/strategy/gimbal/: BasketballTeamStrategyGimbal.cpp  BasketballTeamStrategyGimbal.h  FootballTeamStrategyGimbal.cpp  FootballTeamStrategyGimbal.h  TeamStrategyGimbal.cpp  TeamStrategyGimbal.h
sdk/logic/util/: CoordinateTransform.cpp  CoordinateTransform.h  DetectionResult.h  GimbalCoordTransform.cpp  GimbalCoordTransform.h  PosePostProcess.cpp  PosePostProcess.h  chamCalibrateXY.cpp  chamCalibrateXY.h
wrapper/: XbotgoSdk.h  XbotgoStrategyCommon.cpp  XbotgoStrategyCommon.h
wrapper/api/: XbotgoPickleballStrategy.cpp  XbotgoPickleballStrategy.h  XbotgoSingleStrategy.cpp  XbotgoSingleStrategy.h  XbotgoStrategy.cpp  XbotgoStrategy.h  XbotgoTennisStrategy.cpp  XbotgoTennisStrategy.h
wrapper/callback/: XbotgoControlCallback.h  XbotgoSingleStrategyCallback.h  XbotgoStrategyCallback.h  XbotgoTennisStrategyCallback.h
